# coordinator-tasks

./: .gitignore  .gitignore~  README.md  app.js  big_tasks.txt  planthi.xml  select_poll_echo_server.py  selectors_echo_client.py  selectors_echo_server.py  test_request_module.js  text-find.py
buffer/func_prog/: CMakeLists.txt  launcher_tests.cc  notes.txt
buffer/scripts-emb-ext/projects/v8-wrap-gen/: .gitignore  CMakeLists.txt  README.md
buffer/scripts-emb-ext/projects/v8-wrap-gen/apps/: make_wrapper.bat
buffer/scripts-emb-ext/projects/v8-wrap-gen/sources/: generate_v8_wrap.py  inner_reuse_local.py  maker_sources.py
buffer/scripts-emb-ext/projects/v8-wrap-gen/sources/parsers_cpp_code/: header_ast_parser.py  header_handmade_parser.py  header_parser_test.py
buffer/scripts-emb-ext/projects/v8-wrap-gen/sources/v8_api_gen_r16258/: matrix.py  (+4 more)
buffer/scripts-emb-ext/projects/v8-wrap-gen/tests/: test_ast_from_gmock.py
buffer/shard-cpp-test/ides/qt-creator-cmake/test/: CMakeLists.txt  foo.cpp  foo.h  main.cpp
buffer/shard-cpp-test/projects/analysers_templs/asan_check_templ/: CMakeLists.txt  Makefile_hx64_tx86  hx64_tx86
buffer/shard-cpp-test/projects/analysers_templs/tsan_check_templ/: CMakeLists.txt  simple_race.cc
micro-apps/: .gitignore  CMakeLists.txt
micro-apps/intern/details/: graph_details.cc  io_details.cc
micro-apps/intern/visuality/: __init__.py  view.h
projects/cc-desk/: CMakeLists.txt  concepts_test.cc  glob_dispatcher_text.cc
projects/cc-desk/doc/: deps.txt  design.txt  ideal_arch.txt  store.txt~  trouble10_external_services.txt  trouble11_ref_val.txt  trouble11_tsan.txt  trouble1_use_mult_db.txt  trouble1_use_mult_db.txt~  trouble2_change_db_on_runtime.txt  trouble4_smart_and db_actor.txt~  trouble5_async_and_consistency.txt  trouble5_async_and_consistency.txt~  trouble6_async_io_bounded_ops.txt~  trouble9_error_handl.txt  troubles0_migration.txt  troubles0_migration.txt~  try_ideas.txt
projects/cc-desk/doc/design/: arch.txt  forge.txt  store.txt
projects/cc-desk/release/backups/: in_psql.txt
projects/cc-desk/source/: test.db  test.db-journal
projects/cc-desk/source/canary/: entities.cc  entities_and_values.h  fake_store.cc  fake_store.h  filters.cc  filters.h  filters_test.cc  isolation.h  model.cc  model.h  renders.cc  renders.h
projects/cc-desk/source/common/: error_handling.h
projects/cc-desk/source/core/: actor_ui.cc  actor_ui.h  concepts.h  qt_event_loop.cc  runtime.h  scopes.cc  scopes.h
projects/cc-desk/source/dal/: db_indep.cc  db_indep.h  pq_queries.cc  pq_queries.h  sqlite_queries.cc  sqlite_queries.h
projects/cc-desk/source/data_access_layer/: db_indep.cc  db_indep.h  fake_store.cc  fake_store.h  pq_queries.cc  pq_queries.h  sqlite_queries.cc  sqlite_queries.h
projects/cc-desk/source/heart/: config.h
projects/cc-desk/source/mains/: launcher_tests.cc  main.cc
projects/cc-desk/source/model_layer/: entities.cc  entities.h  filters.cc  filters.h  isolation.h  model.cc  model.h  values.cc  values.h
projects/cc-desk/source/things/: entities.cc  entities.h  entities_and_values.h  values.cc  values.h
projects/cc-desk/source/top/: app_types.h  config.h
projects/cc-desk/source/view/: mainwindow.cc  mainwindow.h  mainwindow.ui  qt_event_loop.cc  qt_event_loop.h  renders.cc  renders.h  view.cc  view.h
projects/cc-desk/source/wrappers/: sqlite_xx.cc  sqlite_xx.h
projects/cc-desk/src/: actor_ui.cc  concepts.h  mainwindow.cc  mainwindow.h  qt_event_loop.cc  renders.cc
projects/cc-desk/tests/: app_spec_test.cc  blocked_spec_test.cc  concepts_test.cc  csv_emitters_test.cc  entities_test.cc  filters_test.cc  hypertable_adapt_test.cc  model_test.cc  pq_queries_test.cc  pq_test.cc  sqlite_test.cc  sqlite_xx_test.cc  stl_queries_test.cc
projects/cc-desk/tests/db/: store_postgresql_test.cc  store_sqlite_test.cc
projects/cc-desk/tests/queries/: sqlite_store_test.cc
projects/cc-desk/tests/units/: model_test.cc
version-qt-desk/: .project  CMakeLists.txt  Makefile  _app.pro  a.app  app.cc  app.pro  coordinator.pro  dal.cc  dal.h  domain.h  entities.h  fail_statistic.txt  forge.txt  forge.txt.autosave  launcher.cc  sh_clang_analyse.sh  storage_access.cc
version-qt-desk/coordinator/: coordinator.pro  main.cpp  mainwindow.cpp
version-qt-desk/coordinator_sln/: coordinator.pro  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
version-qt-desk/doc/: forge.txt
version-qt-desk/domain/: forge.txt
version-qt-desk/domain/research/: db_access_apps.cc
version-qt-desk/nbproject/: configurations.xml
version-qt-desk/nbproject/private/: Default.properties  configurations.xml  private.xml
version-qt-desk/qt-space/coordinator-build-desktop-Qt_4_8_2_in_PATH__System__Release/: Makefile  coordinator  moc_mainwindow.cpp  ui_mainwindow.h
version-qt-desk/research/: layouts.py
version-qt-desk/slns/coordinator_sln/: main.cpp
version-qt-desk/src/: app.cc  app_core_test.cc  app_core_test.cc.autosave  entities_test.cc  fake_store.cc  fake_store.h  htable_adapt_test.cc  main.cc  model_test.cc  models.cc  models_test.cc  pq_dal.cc  pq_dal_test.cc  pq_test.cc  storage_access.cc  test_help_data.cc  test_help_data.h
version-qt-desk/src/_trash/: _trash.cc
version-qt-desk/src/canary/: app_core.cc  app_core.h  app_core.h.autosave  app_core_test.cc  app_types.h  busi.cc  busi.h  busi_test.cc  entities.cc  entities.h  entities.h.autosave  entities_and_values.cc  entities_and_values.h  entities_and_values_test.cc  entities_test.cc  error_handling.h  filters.cc  filters.h  filters_chain_test.cc  filters_test.cc  isolation.h  lower_level.cc  lower_level.h  model.cc  model.h  model_test.cc  pq_dal.cc  pq_dal.cc.autosave  pq_dal.h  pq_dal.h.autosave  pq_dal_test.cc  pq_queries.cc  pq_queries.h  pq_queries_test.cc  render.h  renders.cc  renders.h  storage_access.h
version-qt-desk/src/model/: models.cc
version-qt-desk/src/top/: config.h  error_handling.h
version-qt-desk/src/view/: app_spec_test.cc  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  trash.cc  view.cc  view.h
version-qt-desk/view_sln/coordinator_sln/: coordinator.pro
(+1178 files in other folders)
